--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,52 @@
   margin: 0;
   font-size: 48px;
 }
+.content-container {
+  width: 98vw;
+  height: 89vh;
+}
+.content-container .articles {
+  margin-top: 95px;
+}
+.content-container .article {
+  margin: 20px 10%;
+  padding: 0 20px 25px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background-color: white;
+  position: relative;
+  height: 50px;
+  overflow: hidden;
+  box-shadow: 2px 2px 2px lightgrey;
+}
+.content-container .article h2 {
+  font-size: 28px;
+  padding: 0;
+  margin: 15px 0 0;
+}
+.content-container .article .date {
+  margin: 0;
+  font-size: 14px;
+}
+.content-container .article .close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.content-container .article .expandButton {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  font-size: 12px;
+  color: grey;
+  cursor: pointer;
+  transform: translate(-50%);
+  background-color: white;
+}
+.content-container .article-open {
+  height: auto;
+  overflow: scroll;
+}
 .articles {
   margin-top: 95px;
 }
@@ -83,7 +129,6 @@
   cursor: pointer;
 }
 .menu {
-  display: none;
   position: fixed;
   top: 75px;
   left: 0;
@@ -96,6 +141,8 @@
   border-bottom: none;
   z-index: 2;
   /* This set the layer level of the element, it has precendence over initial level of 1*/
+  transform: translateX(-400px);
+  transition: all 0.7s ease-out;
 }
 .menu ul li {
   list-style-type: none;
@@ -105,6 +152,7 @@
 }
 .menu--open {
   display: block;
+  transform: translateX(0);
 }
 html,
 body {
